[gd_scene load_steps=35 format=2]

[ext_resource path="res://SubBossAnimation.gd" type="Script" id=1]
[ext_resource path="res://SubBoss.gd" type="Script" id=2]
[ext_resource path="res://sprites/npc/child/evil_spirit.png" type="Texture" id=3]
[ext_resource path="res://sprites/npc/child/evil_spirit_death.png" type="Texture" id=4]
[ext_resource path="res://sprites/npc/child/evil_spirit_release.png" type="Texture" id=5]
[ext_resource path="res://sprites/npc/child/evil_spirit_stunned.png" type="Texture" id=6]
[ext_resource path="res://audio/Enemy/Spirit/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/Enemy/Spirit/death.wav" type="AudioStream" id=8]
[ext_resource path="res://sprites/npc/good_mini_healthbar.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "release",
"speed": 2.5
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": false,
"name": "death",
"speed": 2.5
}, {
"frames": [ SubResource( 72 ) ],
"loop": true,
"name": "stunned",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=48]
radius = 6.0
height = 2.0

[sub_resource type="CircleShape2D" id=49]
radius = 123.199

[sub_resource type="CapsuleShape2D" id=52]
radius = 7.00001
height = 5.99999

[sub_resource type="CapsuleShape2D" id=51]
radius = 7.0
height = 8.0

[node name="SubBoss" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
frame = 1
playing = true
flip_h = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 48 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="PlayerDetector" type="CollisionShape2D" parent="PlayerDetection"]
rotation = 0.261799
shape = SubResource( 49 )

[node name="PunchBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="DamageBox" type="CollisionShape2D" parent="PunchBox"]
rotation = 1.57079
shape = SubResource( 52 )
disabled = true

[node name="HitBoxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="HitBoxArea"]
rotation = 1.57079
shape = SubResource( 51 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 9 )
hframes = 5
vframes = 5

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="body_entered" from="PunchBox" to="." method="_on_PunchBox_body_entered"]
[connection signal="body_exited" from="PunchBox" to="." method="_on_PunchBox_body_exited"]
[connection signal="body_entered" from="HitBoxArea" to="." method="on_body_entered" binds= [ 5 ]]
